Support java starting from 11